# autogluon-rag

./: .gitignore  ATTRIBUTION.txt  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflow_scripts/: build_doc.sh  env_setup.sh  lint_check.sh  test_agrag.sh
.github/workflows/: continuous_integration.yml
docs/: CNAME  README.md  api.rst  conf.py  index.md  requirements_doc.txt  tutorial.md  usage.md  versions.rst
docs/_templates/: custom_class.rst
docs/api/: agrag.modules.DataProcessingModule.process_file.rst  agrag.modules.DataProcessingModule.process_files.rst  agrag.modules.DataProcessingModule.process_url.rst  agrag.modules.DataProcessingModule.process_urls.rst  agrag.modules.DataProcessingModule.rst  agrag.modules.EmbeddingModule.encode.rst  agrag.modules.EmbeddingModule.encode_queries.rst  agrag.modules.EmbeddingModule.rst  agrag.modules.GeneratorModule.generate_response.rst  agrag.modules.GeneratorModule.rst  agrag.modules.Reranker.rerank.rst  agrag.modules.Reranker.rst  agrag.modules.RetrieverModule.encode_query.rst  agrag.modules.RetrieverModule.retrieve.rst  agrag.modules.RetrieverModule.rst  agrag.modules.VectorDatabaseModule.rst  agrag.modules.data_processing.data_processing.DataProcessingModule.process_file.rst  agrag.modules.data_processing.data_processing.DataProcessingModule.process_files.rst  agrag.modules.data_processing.data_processing.DataProcessingModule.process_url.rst  agrag.modules.data_processing.data_processing.DataProcessingModule.process_urls.rst  agrag.modules.data_processing.data_processing.DataProcessingModule.rst
docs/common_errors/: common_errors.md
docs/evaluation/: evaluation.md
docs/tutorials/: index.md  usage.md
docs/tutorials/data_processing/: index.md  process_data.md
docs/tutorials/embedding/: generate_embeddings.md  index.md  set_max_tokens.md
docs/tutorials/general/: aws_resources.md  code_parameters.md  index.md  model_access.md  setting_parameters.md
docs/tutorials/generator/: change_generator.md  generator_only.md  index.md  speculative_decoding.md
docs/tutorials/retriever/: disable_reranker.md  index.md
docs/tutorials/vector_db/: index.md  optimizing_faiss.md
documentation/: common_errors.md  tutorial.md
documentation/tutorials/data_processing/: process_data.md
documentation/tutorials/embedding/: generate_embeddings.md
documentation/tutorials/general/: model_access.md  setting_parameters.md
documentation/tutorials/generator/: change_generator.md
documentation/tutorials/retriever/: disable_reranker.md
documentation/tutorials/vector_db/: optimizing_faiss.md
src/agrag/: agrag.py  args.py  constants.py  defaults.py  main.py  main_deprecated.py  utils.py
src/agrag/configs/: codebase_config.yaml  defaults.py  example_config.yaml
src/agrag/configs/data_processing/: default.yaml
src/agrag/configs/embedding/: default.yaml
src/agrag/configs/generator/: default.yaml
src/agrag/configs/presets/: medium_quality_config.yaml
src/agrag/configs/retriever/: default.yaml
src/agrag/configs/shared/: default.yaml
src/agrag/configs/vector_db/: default.yaml
src/agrag/evaluation/: README.md  dataset_utils.py  evaluator.py  utils.py
src/agrag/evaluation/datasets/google_natural_questions/: evaluate_agrag.py  google_nq.py
src/agrag/modules/: __init__.py  data_ingestion.py  embedding.py  generator.py  retriever.py  vector_database.py
src/agrag/modules/data_ingestion/: data_ingestion.py
src/agrag/modules/data_processing/: README.md  data_processing.py  utils.py
src/agrag/modules/embedding/: README.md  constants.py  embedding.py  utils.py
src/agrag/modules/evaluation/: evaluate_agrag.py
src/agrag/modules/generator/: README.md  generator.py  utils.py
src/agrag/modules/generator/generators/: bedrock_generator.py  gpt_generator.py  hf_generator.py  vllm_generator.py
src/agrag/modules/retriever/: README.md  retriever.py
src/agrag/modules/retriever/rerankers/: flag_embedding_reranker.py  reranker.py  sentence_transformer_reranker.py
src/agrag/modules/retriever/retrievers/: retriever_base.py
src/agrag/modules/vector_db/: README.md  utils.py  vector_database.py
src/agrag/modules/vector_db/faiss/: faiss.py  faiss_db.py
src/agrag/modules/vector_db/milvus/: milvus_db.py
src/agrag/unittests/: test_data_ingestion.py
src/ragify/: agrag.py  args.py  main.py
src/ragify/configs/vector_db/: default.yaml
src/ragify/evaluation/: README.md  evaluator.py
src/ragify/modules/data_processing/: README.md  data_processing.py  utils.py
src/ragify/modules/embedding/: embedding.py  utils.py
src/ragify/modules/generator/: README.md  generator.py
src/ragify/modules/generator/generators/: bedrock_generator.py  gpt_generator.py
src/ragify/modules/retriever/: README.md
src/ragify/modules/retriever/retrievers/: retriever_base.py
src/ragify/modules/vector_db/: README.md  utils.py  vector_database.py
src/ragify/modules/vector_db/milvus/: milvus_db.py
tests/unittests/: test_data_ingestion.py  test_data_processing.py  test_embedding.py
tests/unittests/data_processing/: test_data_processing.py
tests/unittests/embedding/: test_embedding.py
tests/unittests/generator/: test_bedrock_generator.py  test_generator.py  test_gpt_generator.py  test_hf_generator.py
tests/unittests/retriever/: test_reranker.py  test_retriever.py
tests/unittests/vector_db/: test_faiss.py  test_milvus.py  test_vector_db.py
