[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "agrag"
version = "0.0.1" 
description = "An automated RAG pipeline building framework"
authors = ["AutoGluon Community"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://auto.gluon.ai/rag/dev/index.html"  
repository = "https://github.com/autogluon/autogluon-rag" 
documentation = "https://auto.gluon.ai/rag/dev/index.html"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
beautifulsoup4 = ">=4.12.0,<5.0"
boto3 = ">=1.34.124,<2.0"
datasets = ">=2.20.0,<3.0"
evaluate = ">=0.4.2,<1.0"
faiss-cpu = ">=1.8.0,<2.0"
langchain-community = ">=0.2.4,<1.0"
langchain-text-splitters = ">=0.2.1,<1.0"
numpy = ">=1.26.4,<2.0"
openai = ">=1.34.0,<2.0"
pandas = ">=2.2.2,<3.0"
pymilvus = ">=2.4.1,<3.0"
pypdf = ">=4.2.0,<5.0"
pytest = ">=8.2.2,<9.0"
python-docx = ">=1.1.2,<2.0"
pyyaml = ">=6.0.1,<7.0"
scikit-learn = ">=1.3.2,<2.0"
torch = ">=2.3.1,<3.0"
torchvision = ">=0.18.1,<1.0"
transformers = ">=4.41.2,<5.0"
qa-metrics = ">=0.2.16,<0.4.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
tox = "*"
black = ">=23.1.9,<=23.7.0"
isort = ">=5.11.0,<=5.12.0"

[tool.poetry.scripts]
agrag = "agrag.main:ag_rag"

[tool.black]
line-length = 119
target-version = ['py39', 'py310', 'py311']

[tool.isort]
known_first_party = "autogluon-rag"
known_third_party = [
    "boto3", 
    "langchain_community", 
    "langchain_text_splitters", 
    "torch", 
    "transformers", 
    "yaml"
]
line_length = 119
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--strict-markers"
xfail_strict = true
filterwarnings = [
    "ignore::DeprecationWarning",
]
